--- a/.github/workflows/ob-builder.yml
+++ b/.github/workflows/ob-builder.yml
@@ -10,7 +10,7 @@ on:
         required: true
         type: string
       machine:
-        description: 'The machine to build (generic-x86-64,, intel-nuc, khadas-vim3, odroid-c2, odroid-c4, odroid-n2, odroid-xu, qemuarm, qemuarm-64, qemux86, qemux86-64, raspberrypi, raspberrypi2, raspberrypi3, raspberrypi3-64, raspberrypi4, raspberrypi4-64, tinker, yellow)'
+        description: 'The machine to build (generic-x86-64, intel-nuc, khadas-vim3, odroid-c2, odroid-c4, odroid-n2, odroid-xu, qemuarm, qemuarm-64, qemux86, qemux86-64, raspberrypi, raspberrypi2, raspberrypi3, raspberrypi3-64, raspberrypi4, raspberrypi4-64, tinker, yellow)'
         default: 'raspberrypi4-64'
         required: true
         type: string
@@ -31,7 +31,6 @@ jobs:
   build_base:
     name: Build ${{ inputs.arch }} base core image
     if: github.repository_owner == 'oceanbuilders'
-    needs: init
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
