--- a/.github/workflows/ob-builder.yml
+++ b/.github/workflows/ob-builder.yml
@@ -58,18 +58,18 @@ jobs:
         run: |
           echo "${{ github.sha }};${{ github.ref }};${{ github.event_name }};${{ github.actor }}" > rootfs/OFFICIAL_IMAGE
 
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v2.0.0
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to GitHub Container Registry
+      - name: Login to DockerHub
         uses: docker/login-action@v2.0.0
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      # - name: Login to GitHub Container Registry
+      #   uses: docker/login-action@v2.0.0
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.repository_owner }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build base image
         uses: home-assistant/builder@2022.07.0
@@ -78,7 +78,10 @@ jobs:
             $BUILD_ARGS \
             --${{ inputs.arch }} \
             --target /data \
-            --generic ${{ inputs.version }}
+            --generic ${{ inputs.version }} \
+            --docker-hub ${{ secrets.DOCKER_HUB_REPOSITORY }} \
+            --docker-user ${{ secrets.DOCKER_HUB_USERNAME }} \
+            --docker-password ${{ secrets.DOCKER_HUB_TOKEN }}
         # env:
         #   CAS_API_KEY: ${{ secrets.CAS_TOKEN }}
 
@@ -101,18 +104,18 @@ jobs:
           else
             echo "BUILD_ARGS=--additional-tag stable" >> $GITHUB_ENV
           fi
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v2.0.0
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to GitHub Container Registry
+      - name: Login to DockerHub
         uses: docker/login-action@v2.0.0
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      # - name: Login to GitHub Container Registry
+      #   uses: docker/login-action@v2.0.0
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.repository_owner }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build base image
         uses: home-assistant/builder@2022.07.0
@@ -120,6 +123,9 @@ jobs:
           args: |
             $BUILD_ARGS \
             --target /data/machine \
-            --machine "${{ inputs.version }}=${{ inputs.machine }}"
+            --machine "${{ inputs.version }}=${{ inputs.machine }}" \
+            --docker-hub ${{ secrets.DOCKER_HUB_REPOSITORY }} \
+            --docker-user ${{ secrets.DOCKER_HUB_USERNAME }} \
+            --docker-password ${{ secrets.DOCKER_HUB_TOKEN }}
         # env:
         #   CAS_API_KEY: ${{ secrets.CAS_TOKEN }}
