--- a/machine/build.yaml
+++ b/machine/build.yaml
@@ -5,9 +5,9 @@ build_from:
   armhf: "ghcr.io/home-assistant/armhf-homeassistant:"
   amd64: "ghcr.io/home-assistant/amd64-homeassistant:"
   i386: "ghcr.io/home-assistant/i386-homeassistant:"
-codenotary:
-  signer: notary@home-assistant.io
-  base_image: notary@home-assistant.io
+# codenotary:
+#   signer: notary@home-assistant.io
+#   base_image: notary@home-assistant.io
 labels:
   io.hass.type: core
   org.opencontainers.image.source: https://github.com/home-assistant/core
