--- a/build.yaml
+++ b/build.yaml
@@ -5,9 +5,9 @@ build_from:
   armv7: ghcr.io/home-assistant/armv7-homeassistant-base:2022.06.1
   amd64: ghcr.io/home-assistant/amd64-homeassistant-base:2022.06.1
   i386: ghcr.io/home-assistant/i386-homeassistant-base:2022.06.1
-codenotary:
-  signer: notary@home-assistant.io
-  base_image: notary@home-assistant.io
+# codenotary:
+#   signer: notary@home-assistant.io
+#   base_image: notary@home-assistant.io
 labels:
   io.hass.type: core
   org.opencontainers.image.title: Home Assistant
